--- a/courses/macroeconomics/dynamic_macroeconomics/solow_growth/index.html
+++ b/courses/macroeconomics/dynamic_macroeconomics/solow_growth/index.html
@@ -934,7 +934,7 @@ Si l&rsquo;on préfère mesurer le bien-être avec la consommation <em>par habit
 Pour cela, il suffit de reprendre les définitions et de calculer le taux de croissance de chaque variable.
 On indique le taux de croissance de la variable $x$ par $g_{x}$.
 Lorsque le temps est continu, il se calcule comme suit: <sup id="fnref:1"><a href="#fn:1" class="footnote-ref" role="doc-noteref">1</a></sup></p>
-<p>$$g_{x} = \frac{\dot{x}}{g}.$$</p>
+<p>$$g_{x} = \frac{\dot{x}}{x}.$$</p>
 <p>Ainsi:</p>
 <ul>
 <li>Capital total : $k \equiv \frac{K}{L} \implies K = kL \implies g_{K} = \frac{\dot{kL}}{kL} = \frac{\dot{k}L}{kL} + \frac{k\dot{L}}{kL} = \frac{\dot{k}}{k} + \frac{\dot{L}}{L} = $
@@ -958,7 +958,8 @@ Pendant cette transition, le taux de variation du capital, noté $\dot{k}$, est 
 De plus, à mesure que l&rsquo;on se rapproche de l&rsquo;état stationnaire, le taux de croissance du capital diminue jusqu&rsquo;à atteindre zéro.
 Il est donc clair que pendant cette transition, on observe une croissance économique à la fois en termes de revenu par habitant et en termes de revenu total.</p>
 <p>En effet, avec $\dot{k} &gt; 0$, le taux de croissance du capital <em>par habitant</em> est positif : $g_{k} = \frac{\dot{k}}{k} &gt; 0$.
-Par conséquent, la production par habitant et la consommation par habitant augmentent également : $g_{y} = g_{k^\alpha} = \alpha g_{k} &gt; 0$ et $g_{c} = g_{(1-s)y} = g_{y} &gt; 0$.</p>
+Par conséquent, la production par habitant et la consommation par habitant augmentent également.
+Avec une fonction de type Cobb-Douglas, nous avons: $g_{y} = g_{k^\alpha} = \alpha g_{k} &gt; 0$ et $g_{c} = g_{(1-s)y} = g_{y} &gt; 0$.</p>
 <p>Les variables en termes de revenu total augmentent également plus rapidement qu&rsquo;auparavant.
 Par exemple, le taux de croissance du capital total est donné par $g_{K} = g_{Lk} = g_{k} + g_{L} = \frac{\dot{k}}{k} + n &gt; n$.</p>
 <h4 id="convergence">Convergence</h4>
