Added first round of exercises for Solow.

--- a/courses/macroeconomics/dynamic_macroeconomics/index.html
+++ b/courses/macroeconomics/dynamic_macroeconomics/index.html
@@ -978,6 +978,7 @@ Par exemple, Arrow (1962) et Romer (1986) proposent des modèles où les connais
 Du point de vue théorique, cela revient à considérer la croissance technologique comme une externalité de la production.
 Plus tard, Romer (1987, 1990) ajoute un secteur de l&rsquo;économie dédié à la création d&rsquo;idées et introduit la concurrence imparfaite pour protéger les idées.
 Une autre approche pour modéliser la création de nouvelles idées est le paradigme schumpétérien, où les individus inventent des nouvelles technologies qui surpassent les précédentes, par exemple Aghion et Howitt (1992).</p>
+<p><a href="/files/Exercises_Solow.pdf">Exercises</a></p>
 <div class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
