Spaced an equation better.

--- a/courses/macroeconomics/olg/olg_steady_state/index.html
+++ b/courses/macroeconomics/olg/olg_steady_state/index.html
@@ -1109,7 +1109,8 @@ Ultimately, what matters is the concavity of the function $g(k_{t}).$</p>
 <h4 id="unique-steady-state-bark--0">Unique steady state, $\bar{k} &gt; 0$</h4>
 <p>If $\rho \in (0,1)$, the second derivative is clearly negative, and $g$ is concave.
 Moreover, $g(0)&gt;0$, so $\bar{k} = 0$ cannot be a steady state:</p>
-<p>$$g(k_{t}) = \frac{\beta A(1-\alpha)}{(1+n)(1+\beta)}(\alpha k^\rho + 1 - \alpha)^\frac{1-\rho}{\rho} \implies g(0)=\frac{\beta A(1-\alpha)^\frac{1}{\rho}}{(1+n)(1+\beta)}&gt; 0.$$
+<p>$$g(k_{t}) = \frac{\beta A(1-\alpha)}{(1+n)(1+\beta)}(\alpha k^\rho + 1 - \alpha)^\frac{1-\rho}{\rho} \implies $$
+$$ \implies g(0)=\frac{\beta A(1-\alpha)^\frac{1}{\rho}}{(1+n)(1+\beta)}&gt; 0.$$
 In that case, the economy displays a unique steady state, and it is globally stable.</p>
 <p>
 
