--- a/courses/macroeconomics/olg/olg_steady_state/index.html
+++ b/courses/macroeconomics/olg/olg_steady_state/index.html
@@ -1105,7 +1105,8 @@ The curve $g(k)$ is increasing:</p>
 <p>$$g^\prime (k) = \frac{\beta A (1-\alpha)}{(1+n)(1+\beta )}(1-\rho)\left[ \alpha k^\rho + 1 - \alpha \right]^\frac{1-2 \rho}{\rho}k^{\rho -1} &gt; 0.$$</p>
 <p>Depending on the value of $\rho$ we can have different configurations regarding the steady states.
 Ultimately, what matters is the concavity of the function $g(k_{t}).$</p>
-<p>$$g^{\prime \prime}(k_t) = -\frac{1}{1+n}\frac{\beta}{1+\beta}A(1-\rho)\alpha\left[\alpha k^\rho+1-\alpha\right]^\frac{1-3\rho}{\rho}k^{\rho-2}\left(\rho \alpha k^\rho +(1-\alpha)(1-\rho)\right).$$</p>
+<p>$$g^{\prime \prime}(k_t) = $$
+$$-\frac{1}{1+n}\frac{\beta}{1+\beta}A(1-\rho)\alpha\left[\alpha k^\rho+1-\alpha\right]^\frac{1-3\rho}{\rho}k^{\rho-2}\left(\rho \alpha k^\rho +(1-\alpha)(1-\rho)\right).$$</p>
 <h4 id="unique-steady-state-bark--0">Unique steady state, $\bar{k} &gt; 0$</h4>
 <p>If $\rho \in (0,1)$, the second derivative is clearly negative, and $g$ is concave.
 Moreover, $g(0)&gt;0$, so $\bar{k} = 0$ cannot be a steady state:</p>
