Changed color in equation.

--- a/courses/macroeconomics/olg/olg_steady_state/index.html
+++ b/courses/macroeconomics/olg/olg_steady_state/index.html
@@ -1027,7 +1027,7 @@ We do so by showing that $\lim_{k \rightarrow +\infty} \color{green}{\frac{\omeg
 <details>
 <summary>Detailed explanation</summary>
 We start by noting that:
-<p>$$\color{green}{\frac{\omega(k)}{k}} = \color{red}{\frac{f(k)}{k}} - \color{blue}{f^\prime (k)} \leftarrow \omega(k) = f(k) - f^\prime (k) k.$$</p>
+<p>$$\color{green}{\frac{\omega(k)}{k}} = \color{red}{\frac{f(k)}{k}} - \color{blue}{f^\prime (k)} \color{black}{\leftarrow \omega(k) = f(k) - f^\prime (k) k.}$$</p>
 <p>When $k \rightarrow +\infty$, <strong>the first term $\color{red}{\frac{f(k)}{k}}$</strong> admits a positive limit, let&rsquo;s call it $\mathcal{l}_{1}.$
 This is because:</p>
 <ol>
