--- a/courses/macroeconomics/olg/olg_steady_state/index.html
+++ b/courses/macroeconomics/olg/olg_steady_state/index.html
@@ -1059,7 +1059,8 @@ $$u^\prime(w_{t} - s_{t}) = \beta R_{t+1} u^\prime (R_{t+1}s_{t}).$$</p>
 <p>$$k_{t+1} = \frac{1}{1+n}s_{t} = \frac{1}{1+n}\frac{\beta}{1+\beta}w_{t} = \frac{1}{1+n}\frac{\beta}{1+\beta}(1-\alpha)Ak_{t}^\alpha.$$</p>
 <p>The model with log-utility and Cobb-Douglas production functions has two steady states: zero and a unique positive steady state.
 We can solve for them:</p>
-<p>$$\bar{k} = \frac{1}{1+n}\frac{\beta}{1+\beta}(1-\alpha)A\bar{k}^\alpha \implies \bar{k} = \begin{cases} 0 \\\ \left(\frac{1}{1+n}\frac{\beta}{1+\beta}(1-\alpha)A\right)^{\frac{1}{1-\alpha}} \equiv \phi^\frac{1}{1-\alpha}\end{cases}.$$</p>
+<p>$$\bar{k} = \frac{1}{1+n}\frac{\beta}{1+\beta}(1-\alpha)A\bar{k}^\alpha \implies $$
+$$\implies \bar{k} = \begin{cases} 0 \\\ \left(\frac{1}{1+n}\frac{\beta}{1+\beta}(1-\alpha)A\right)^{\frac{1}{1-\alpha}} \equiv \phi^\frac{1}{1-\alpha}\end{cases}.$$</p>
 <p><strong>Local dynamics: stability</strong></p>
 <p>We check the stability of the two steady states using the first derivative evaluated at the steady state.
 <strong>Note:</strong> in general we would use the Jacobian matrix, but the OLG model has only one equation in one variable.</p>
