Placed equation in two lines

--- a/courses/macroeconomics/olg/olg_optimality/index.html
+++ b/courses/macroeconomics/olg/olg_optimality/index.html
@@ -933,7 +933,8 @@ First, let $\mathfrak{C}_t$ represent total consumption: $$\mathfrak{C}_t \equiv
 The economy-wide resource constraint dictates that total production is either consumed or invested:</p>
 <p>$$\mathfrak{C}_t  + K_{t+1} = F(K_t, N_t)+ (1-\delta)K_t.$$</p>
 <p>Alternatively, aggregate consumption per unit of labour is:</p>
-<p>$$\mathfrak{c}_t \equiv \frac{\mathfrak{C}_t}{N_t} = \frac{F(K_t, N_t) +(1-\delta)K_t - K_{t+1}}{N_t} = f(k_t) + (1-\delta)k_t - (1+n)k_{t+1}.$$</p>
+<p>$$\mathfrak{c}_t \equiv \frac{\mathfrak{C}_t}{N_t} = \frac{F(K_t, N_t) +(1-\delta)K_t - K_{t+1}}{N_t} = $$
+$$ = f(k_t) + (1-\delta)k_t - (1+n)k_{t+1}.$$</p>
 <p>The <em>golden-rule level of the capital-labour ratio</em> $k^\mathcal{GR}$ is the value of the capital-labour ratio $k$ that results in the highest possible <em>sustainable</em> level of consumption per unit of labour.
 The fact that it is sustainable requires that it is replicable forever.
 For this reason, we consider the steady state with $k_{t+1} = k_t = \bar{k}$.
