Error in an equation.

--- a/courses/macroeconomics/olg/olg_optimality/index.html
+++ b/courses/macroeconomics/olg/olg_optimality/index.html
@@ -1011,7 +1011,7 @@ Our policy of improving utility for all individuals fails in this case.</p>
 <p>We call such situations <strong>dynamically efficient</strong>: it is impossible to increase the utility of all generations.</p>
 <h3 id="example">Example</h3>
 <p>We use a log-utility and Cobb-Douglas case to illustrate over- and under-accumulation of capital.</p>
-<p>$U(c,d) = \log( c ) + \beta \log (d)$$
+<p>$$U(c,d) = \log( c ) + \beta \log (d)$$
 $$f(k)= Ak^\alpha.$$</p>
 <p>The golden-rule level of capital dictates that total consumption per worker should be maximised.
 Using the resource constraint:</p>
