--- a/index.html
+++ b/index.html
@@ -1270,19 +1270,19 @@
   <a href="/publication/beguines/" >
     <div class="img-hover-zoom">
       <img src="/publication/beguines/featured_hu1f21ca580bb32aeae0a23e0262546a5e_120562_808x455_fill_q75_h2_lanczos_smart1.webp" height="455" width="808"
-           class="article-banner" alt="" loading="lazy">
+           class="article-banner" alt="Roots of Gender Equality: the Persistent Effect of Beguinages on Attitudes Toward Women" loading="lazy">
     </div>
   </a>
   
 
   <div class="section-subheading article-title mb-1 mt-3">
-    <a href="/publication/beguines/" ></a>
+    <a href="/publication/beguines/" >Roots of Gender Equality: the Persistent Effect of Beguinages on Attitudes Toward Women</a>
   </div>
 
   
   <a href="/publication/beguines/"  class="summary-link">
     <div class="article-style">
-      <p><strong>Awarded the &lsquo;UWIN Best Paper Award on Gender Economics&rsquo;, 7th edition.</strong>  <br> <strong>Awarded a &lsquo;Valeria Solesin&rsquo; accessit, 2018 edition.</strong> This paper is concerned with the historical roots of gender equality. It proposes and empirically assesses a new class of determinants of gender equality: increases in women&rsquo;s bargaining power through reductions in the cost of remaining single. In particular, enlarging women&rsquo;s options besides marriage —even if only temporarily— increases their bargaining power with respect to men, leading to a persistent improvement in gender equality. We illustrate this mechanism focusing on the specific Belgian context, and relate gender-equality levels in the 19th century to the presence of medieval, female-only communities called <em>beguinages</em> that allowed women to remain single amidst a society that advocated the opposite. Combining precise beguinages&rsquo; location with 19th-century census data, we document that beguinages were instrumental in decreasing the gender gap in literacy.</p>
+      <p><strong>Awarded the &lsquo;UWIN Best Paper Award on Gender Economics&rsquo;, 7th edition.</strong>  <br> <strong>Awarded a &lsquo;Valeria Solesin&rsquo; accessit, 2018 edition.</strong> <br> This paper is concerned with the historical roots of gender equality. It proposes and empirically assesses a new class of determinants of gender equality: increases in women&rsquo;s bargaining power through reductions in the cost of remaining single. In particular, enlarging women&rsquo;s options besides marriage —even if only temporarily— increases their bargaining power with respect to men, leading to a persistent improvement in gender equality. We illustrate this mechanism focusing on the specific Belgian context, and relate gender-equality levels in the 19th century to the presence of medieval, female-only communities called <em>beguinages</em> that allowed women to remain single amidst a society that advocated the opposite. Combining precise beguinages&rsquo; location with 19th-century census data, we document that beguinages were instrumental in decreasing the gender gap in literacy.</p>
     </div>
   </a>
   
