Solved typos in Galor_Moav

--- a/courses/macroeconomics/olg/papers/galor_moav__2006/index.html
+++ b/courses/macroeconomics/olg/papers/galor_moav__2006/index.html
@@ -922,7 +922,7 @@
           <div class="article-style">
             <h2 id="introduction">Introduction</h2>
 <p>This paper presents an OLG model to explain the rise of publicly financed education and the transition from a class structure characterised by capitalists and workers to another one where all individuals are capitalists.
-The papers undefined that the demise of the class structure was a deliberate action from the part of the capitalists to sustain their profits as human capital became more and more important in the production process.
+The papers proposes that the demise of the class structure was a deliberate action from the part of the capitalists to sustain their profits as human capital became more and more important in the production process.
 This is, at some point in time, human capital becomes <em>really</em> necessary to produce, and the capitalists find it optimal to tax themselves to finance the education of workers.
 Doing so, raises the human capital level and allows them to keep their profits.</p>
 <p>The paper is set-up after the industrial revolution, let&rsquo;s say around 1850 and is meant to describe the transition of the modern economies between that time and the beginning of the 20th century.
@@ -965,7 +965,7 @@ If education is provided, human capital accumulation is faster.</p>
 <h3 id="production-and-prices">Production and prices</h3>
 <p>A single homogenous good is produced using physical and human capital according to a Cobb-Douglas production function.
 In particular:</p>
-<p>$$Y_t = F(H_t, K_t) = A K_t^\alpha H_t^{1-\alpha} = A H_t k_t^\alpha,\quad k_t \equiv \frac{K_t}{H_t}.$$</p>
+<p>$$Y_t = F(H_t, K_t) = A K_t^\alpha H_t^{1-\alpha} = A k_t^\alpha,\quad k_t \equiv \frac{K_t}{H_t}.$$</p>
 <p>Given the wage rate per efficiency unit of labour $w_t$ and the return to capital $r_t$, producers maximise profits by choosing the level of capital $K_t$ and efficiency units of labour $H_t,$ this is, $\{K_t, H_t\} = \arg \max \left[A H_t k_t^\alpha - w_t H_t - r_t K_t\right].$
 Considering perfect competition, the inverse demand for each factor is:</p>
 <p>$$r_t = f^\prime(k_t) = \alpha A k_t^{\alpha-1} = r(k_t),$$
