Changed per capita for par tête in Comparative Development.

--- a/courses/comparative_development/index.html
+++ b/courses/comparative_development/index.html
@@ -880,8 +880,8 @@
             <h2 id="introduction">Introduction</h2>
 <p>Un des principaux objectifs de l&rsquo;économie dès le début a été compréhension des différences économiques entre pays et régions du monde dans le long terme.
 Suffit de lire le titre du plus célèbre ouvrage d&rsquo;Adam Smith: &ldquo;Recherches sur la nature et les causes de la richesse des nations&rdquo;.
-Dès nos jours, l&rsquo;écart entre pays est assez large : la différence de PIB per capita entre le pays le plus développé (Hong-Kong, États-Unis) et le moins développé (Burundi) montre un ratio de 127:1.
-Même dans un seul continent, on voit différences assez larges : Trinité-et-Tobago a un PIB per capita 31 fois plus grand qu&rsquo;Haïti; Macao 170 plus qu&rsquo;Afghanistan; Monaco 51 fois plus qu&rsquo;Ukraine.</p>
+Dès nos jours, l&rsquo;écart entre pays est assez large : la différence de PIB par tête entre le pays le plus développé (Hong-Kong, États-Unis) et le moins développé (Burundi) montre un ratio de 127:1.
+Même dans un seul continent, on voit différences assez larges : Trinité-et-Tobago a un PIB par tête 31 fois plus grand qu&rsquo;Haïti; Macao 170 plus qu&rsquo;Afghanistan; Monaco 51 fois plus qu&rsquo;Ukraine.</p>
 <p>
 
 
@@ -923,7 +923,7 @@ Ainsi, on propose comme raisons de croissance économique les suivantes :</p>
 <li>Rendements décroissants en l&rsquo;accumulation de capital physique et humain,</li>
 <li>Une réduction de l&rsquo;effet du progrès technologique sur la productivité.</li>
 </ul>
-<p>Pour tant, ces théories prédissent une réduction des inégalités, c&rsquo;est-à-dire, de la convergence vers un même niveau de revenu per capita.
+<p>Pour tant, ces théories prédissent une réduction des inégalités, c&rsquo;est-à-dire, de la convergence vers un même niveau de revenu par tête.
 Par contre, ceci n&rsquo;est pas observé dans les données, plutôt au contraire.
 La Figure suivante indique que les pays les plus pauvres n&rsquo;ont pas crû plus rapidement que les pays les plus développés.
 Si c&rsquo;était le cas, on verrait les pays les plus pauvres vers 1980 groupés au-dessus de la ligne de 45 dégrée.
@@ -953,13 +953,13 @@ Par contre, on constate qu&rsquo;ils sont plutôt en dessous.
 <p>Les théories néoclassiques (se focalisant surtout sur l&rsquo;accumulation de capital et la croissance endogène) ont achevée du succès pour expliquer le processus de croissance économique pendant la période moderne.
 Ainsi, en partant des hypothèses de base, elles montrent comment le capital (physique et humain) s&rsquo;accumule et cela contribue à générer une croissance économique.</p>
 <h4 id="manque-de-convergence">Manque de convergence</h4>
-<p>Plus en détail, ce qui est important, c&rsquo;est l&rsquo;accumulation du capital per capita, c&rsquo;est-à-dire, que même si une économie voit sa population augmenter, le capital augmente à une vitesse supérieure.
-Or, dû aux rendements décroissants, la croissance du capital per capita devient de moins au moins vite, jusqu&rsquo;à finir pour ne plus croitre et donc, elle devient une constante.<sup id="fnref:1"><a href="#fn:1" class="footnote-ref" role="doc-noteref">1</a></sup>
+<p>Plus en détail, ce qui est important, c&rsquo;est l&rsquo;accumulation du capital par tête, c&rsquo;est-à-dire, que même si une économie voit sa population augmenter, le capital augmente à une vitesse supérieure.
+Or, dû aux rendements décroissants, la croissance du capital par tête devient de moins au moins vite, jusqu&rsquo;à finir pour ne plus croitre et donc, elle devient une constante.<sup id="fnref:1"><a href="#fn:1" class="footnote-ref" role="doc-noteref">1</a></sup>
 Ainsi, beaucoup de théories de croissance économique prédissent que tous les pays vont arriver à cette situation stationnaire.
 Ainsi, selon cette idée, les précurseurs de l&rsquo;industrialisation devront montrer une croissance plus faible à mesure qu&rsquo;ils atteignent leur état stationnaire.
 Et, au contraire, les pays qui ont débouté leur processus d&rsquo;industrialisation plus tard, devront montrer un taux de croissance plus important.
 Hélas, les données ne confirment pas ce point : si c&rsquo;était le cas, la droite de régression devrait avoir une pente décroissante, c&rsquo;est-à-dire, les pays qu&rsquo;étaient les plus riches dans le passé devront montrer un taux de croissance plus faible.</p>
-<p><strong>Note:</strong> Le type de convergence pour laquelle on compare le taux de croissance et le niveau initial du revenu per capita s&rsquo;appelle &ldquo;bêta convergence&rdquo;.
+<p><strong>Note:</strong> Le type de convergence pour laquelle on compare le taux de croissance et le niveau initial du revenu par tête s&rsquo;appelle &ldquo;bêta convergence&rdquo;.
 
 
 
@@ -987,8 +987,8 @@ Alors, ces théories ignorent presque la totalité de l&rsquo;existence des <em>
 En effet, toutes les théories néoclassiques essaient de présenter des éléments de croissances qui ont été importants pendant les derniers siècles, plus ou moins depuis la révolution industrielle.
 Par contre, les Homo sapiens existent depuis plus de 100 000 années et la plupart de leur existence est complètement ignoré.
 Ce qui est encore plus important, l&rsquo;existence des hommes est caractérisé par un mode de vie qu&rsquo;on connaît avec le nom d&rsquo;<em>époque Malthusienne</em>.</p>
-<p>Encore plus important, l&rsquo;époque Malthusienne, qui comprend plus du 99% du temps d&rsquo;existence de l&rsquo;homme, a comme caractéristique que, chaque fois que la technologie améliorait, cela se traduisait par une augmentation de la population, mais sans avoir un effet sur le revenu per capita.<sup id="fnref:2"><a href="#fn:2" class="footnote-ref" role="doc-noteref">2</a></sup>
-Ainsi, durant cette période, une meilleure technologie se traduisait par plus de population et non par plus de revenu per capita.
+<p>Encore plus important, l&rsquo;époque Malthusienne, qui comprend plus du 99% du temps d&rsquo;existence de l&rsquo;homme, a comme caractéristique que, chaque fois que la technologie améliorait, cela se traduisait par une augmentation de la population, mais sans avoir un effet sur le revenu par tête.<sup id="fnref:2"><a href="#fn:2" class="footnote-ref" role="doc-noteref">2</a></sup>
+Ainsi, durant cette période, une meilleure technologie se traduisait par plus de population et non par plus de revenu par tête.
 
 
 
@@ -1031,7 +1031,7 @@ Ainsi, durant cette période, une meilleure technologie se traduisait par plus d
     <div class="w-100" ><img src="/img/comparative_development/land_income.webp" alt="land_productivity_and_income" loading="lazy" data-zoomable /></div>
   </div></figure>
 </p>
-<p>Or, les théories néoclassiques impliquent, directement, qu&rsquo;une amélioration de la technologie est liée à une augmentation du revenu per capita (dans le court comme dans le long terme).
+<p>Or, les théories néoclassiques impliquent, directement, qu&rsquo;une amélioration de la technologie est liée à une augmentation du revenu par tête (dans le court comme dans le long terme).
 Ainsi, cette opposition entre modèle et réalité montre que les modèles néoclassiques sont incapables d&rsquo;expliquer la totalité du processus de croissance économique.<sup id="fnref:3"><a href="#fn:3" class="footnote-ref" role="doc-noteref">3</a></sup>
 Cela reste important car, comme on verra lors du cours, comprendre les raisons pour lesquelles certaines sociétés aient abandonné l&rsquo;époque Malthusienne plus tôt a des conséquences sur la croissance moderne.</p>
 <h4 id="transition-démographique">Transition démographique</h4>
@@ -1039,8 +1039,8 @@ Cela reste important car, comme on verra lors du cours, comprendre les raisons p
 Le concept de transition démographique est le processus historique par lequel une économie diminue son taux de natalité (et de mortalité).
 La réduction du taux de natalité a des répercussions profondes pour le développement économique.
 De manière succincte, pendant l&rsquo;époque Malthusienne les améliorations technologiques se traduisirent par des augmentations du taux de natalité (ou le taux de survie des enfants), de manière que le revenu disponible par personne restait inchangé.
-Par contre, quand le nombre d&rsquo;enfants diminue, chaque amélioration technologique va permettre d&rsquo;augmenter le revenu per capita.
-Autrement dit, pendant l&rsquo;époque Malthusienne le nombre d&rsquo;enfants s&rsquo;ajustait de manière que le revenu per capita restait inchangé.
+Par contre, quand le nombre d&rsquo;enfants diminue, chaque amélioration technologique va permettre d&rsquo;augmenter le revenu par tête.
+Autrement dit, pendant l&rsquo;époque Malthusienne le nombre d&rsquo;enfants s&rsquo;ajustait de manière que le revenu par tête restait inchangé.
 C&rsquo;est-à-dire, si chaque personne avait besoin d&rsquo;un certain nombre de calories pour sa survie, la population augmentait jusqu&rsquo;à tout le monde obtenait exactement ce nombre de calories.
 Quand le nombre d&rsquo;enfants diminue, une amélioration technologique permet que tout le monde ait accès à plus de ressources, et une partie peu être dédié à l&rsquo;investissement dans le capital humain des enfants pour augmenter leurs connaissances et productivité future.</p>
 <h3 id="la-théorie-unifiée-de-la-croissance-économique">La théorie unifiée de la croissance économique</h3>
