Solved merge because of exam.

--- a/courses/macroeconomics/dynamic_macroeconomics/index.html
+++ b/courses/macroeconomics/dynamic_macroeconomics/index.html
@@ -981,6 +981,7 @@ Une autre approche pour modéliser la création de nouvelles idées est le parad
 <p><a href="/files/Exam_Macro_Dynamique_2023.pdf">Examen 2023</a></p>
 <p><a href="/files/Exercises_Solow.pdf">Exercices</a></p>
 <p><a href="/files/Exercises_Solow_2.pdf">Exercices 2</a></p>
+<p><a href="/files/Exam_Macro_Dynamique_2023.pdf">Examen 2023</a></p>
 <div class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
