--- a/courses/international_trade/trade_policy/index.html
+++ b/courses/international_trade/trade_policy/index.html
@@ -817,6 +817,22 @@
       
 
 
+  <li class=""><a href="/courses/international_trade/ricardian/">The Ricardian Model</a></li>
+
+
+
+  <li class=""><a href="/courses/international_trade/ricardo-empirics/">Empirics around Ricardo</a></li>
+
+
+
+  <li class=""><a href="/courses/international_trade/heckscher-ohlin/">Heckscher-Ohlin model</a></li>
+
+
+
+  <li class=""><a href="/courses/international_trade/heckscher-ohlin-empirics/">Empirics around Heckscher-Ohlin</a></li>
+
+
+
   <li class=""><a href="/courses/international_trade/standard_trade_model/">Standard Trade Model</a></li>
 
 
@@ -829,11 +845,11 @@
 
 
 
-  <li class=""><a href="/courses/international_trade/export_subsidies/">Export subsidies</a></li>
-
-
-
   <li class=""><a href="/courses/international_trade/liaison_mechanism/">Liaison mechanism</a></li>
+
+
+
+  <li class=""><a href="/courses/international_trade/export_subsidies/">Export subsidies</a></li>
 
 
 
@@ -842,6 +858,14 @@
 
 
   <li class=""><a href="/courses/international_trade/non-tariff_barriers/">Non-tariff barriers</a></li>
+
+
+
+  <li class=""><a href="/courses/international_trade/exercises/"></a></li>
+
+
+
+  <li class=""><a href="/courses/international_trade/exercises_trade_policy/"></a></li>
 
       
         </ul>
