Adds sample exam for international trade

--- a/courses/international_trade/index.html
+++ b/courses/international_trade/index.html
@@ -921,6 +921,7 @@ In this course, we will explain trade using three different models: the Ricardia
 However, despite the fact that trade is Pareto-improving, we see that countries put on tariffs and other trade barriers.
 The second part of the course will analyze how these barriers affect countries and try to make sense of them.</p>
 <p>The course closely follows <a href="https://catalogue-bu.uca.fr/permalink/33CLERMONT_BCIU/1eua77o/alma991005521309704411" target="_blank" rel="noopener">&ldquo;International Economics, Theory and Policy&rdquo; by Krugman, Obstfeld and Melitz</a>.</p>
+<p>You can find a sample of a previous exam <a href="/files/Exam_2021.pdf">here</a></p>
 
           </div>
 
