Corrections by Aubin to Classics.

--- a/courses/macroeconomics/macro_2/classic/index.html
+++ b/courses/macroeconomics/macro_2/classic/index.html
@@ -865,7 +865,7 @@
       </ul>
     </li>
     <li><a href="#synthèse">Synthèse</a></li>
-    <li><a href="#politique-fiscale-et-monétaire">Politique fiscale et monétaire</a>
+    <li><a href="#politique-budgétaire-et-monétaire">Politique budgétaire et monétaire</a>
       <ul>
         <li><a href="#augmentation-des-dépenses-publiques">Augmentation des dépenses publiques</a></li>
         <li><a href="#augmentation-de-loffre-de-monnaie">Augmentation de l&rsquo;offre de monnaie</a></li>
@@ -902,7 +902,7 @@ L&rsquo;incapacité du modèle classique à fournir des solutions efficaces à l
 <h2 id="le-modèle-classique">Le modèle classique</h2>
 <p>Le modèle classique s&rsquo;articule autour de trois équations fondamentales :<sup id="fnref:2"><a href="#fn:2" class="footnote-ref" role="doc-noteref">2</a></sup></p>
 <ul>
-<li>Équilibre dans le marché de travail</li>
+<li>Équilibre dans le marché du travail</li>
 <li>Équilibre dans le marché de la monnaie</li>
 <li>Équilibre dans le marché de l&rsquo;emprunt</li>
 </ul>
@@ -971,7 +971,7 @@ Nous la notons, de manière générale avec, $N^d = f\left(\frac{w}{p}\right)$</
     <div class="w-100" ><img src="/img/macro_2/labour_demand_function.webp" alt="Demande de travail" loading="lazy" data-zoomable /></div>
   </div></figure>
 
-En plus, avec un certain nombre de travailleurs $N$, on retrouve le salaire d&rsquo;équilibre $\left(\frac{w}{p}\right)^\star$
+De plus, avec un certain nombre de travailleurs $N$, on retrouve le salaire d&rsquo;équilibre $\left(\frac{w}{p}\right)^\star$
 Ainsi, si le nombre de travailleurs augmente, le salaire diminue.</p>
 <h5 id="exemple">Exemple</h5>
 <p>Imaginons que l&rsquo;économie dispose de 4 unités de capital ($\bar{K} = 4$), et que la fonction de production est $F(\bar{K}, N) = \bar{K}^{0.5} N^{0.5} = 2 N^{0.5}$
@@ -1040,8 +1040,8 @@ Pour un économiste classique, seule une option était possible pour expliquer c
 <p>On s&rsquo;appuie sur la <strong>théorie quantitative de la monnaie</strong> d&rsquo;Alfred Marshall pour expliquer pourquoi les gens détiennent des encaisses réelles.</p>
 <p>Selon Marshall, les agents économiques ont besoin d&rsquo;encaisses réelles pour financer leurs achats.
 Ainsi, la demande de monnaie est <strong>proportionnelle</strong> au PIB.
-En plus, on peut utiliser un même billet en multiples occasions: la monnaie a une vitesse $v$
-Plus la monnaie est rapide, moins de besoin d&rsquo;encaisses car le même billet peut être utilisé pour financer plusieurs transactions.
+De plus, on peut utiliser un même billet de multiples occasions: la monnaie a une vitesse $v.$
+Plus la monnaie est rapide, moins le besoin d&rsquo;encaisses est nécessaire car le même billet peut être utilisé pour financer plusieurs transactions.
 Enfin, si le niveau de prix $p$ est plus important, il est nécessaire de détenir plus de monnaie.</p>
 <p>$$M^d = v p Y$$</p>
 <h4 id="offre-de-monnaie">Offre de monnaie</h4>
@@ -1051,8 +1051,8 @@ Enfin, si le niveau de prix $p$ est plus important, il est nécessaire de déten
 <p>L&rsquo;équilibre est atteint lorsque $M^d = M^s$.
 Autrement dit:</p>
 <p>$$p = \frac{1}{v \bar{Y}} \bar{M}$$</p>
-<p>Ici, nous avons mis $\bar{Y}$ car le niveau de production vient déterminé par la fonction de production et le nombre de travailleurs et donc, est exogène au marché de la monnaie.
-On retrouve la pensée classique : le niveau de prix s&rsquo;ajuste de manière que l&rsquo;offre de monnaie soit égale à la demande de monnaie.</p>
+<p>Ici, nous avons mis $\bar{Y}$ car le niveau de production est déterminé par la fonction de production et le nombre de travailleurs et donc, est exogène au marché de la monnaie.
+On retrouve la pensée classique : le niveau de prix s&rsquo;ajuste de manière à ce que l&rsquo;offre de monnaie soit égale à la demande de monnaie.</p>
 <p>
 
 
@@ -1110,13 +1110,13 @@ On retrouve la pensée classique : le niveau de prix s&rsquo;ajuste de manière 
 </p>
 <h5 id="implications">Implications</h5>
 <p>L&rsquo;implication principale qu&rsquo;on peut tirer du marché de la monnaie est que toute augmentation de l&rsquo;offre monétaire engendre de l&rsquo;inflation.
-En effet, depuis l&rsquo;équation nous avons:</p>
+En effet, à partir de l&rsquo;équation nous avons:</p>
 <p>$$p = \frac{1}{\bar{v}\bar{Y}} \bar{M} \implies
 \gamma_p = \gamma_M - \gamma_Y$$
 où $\gamma$ indique le <em>taux de croissance</em>.
 Ainsi, le taux de croissance des prix ($\gamma_p$, l&rsquo;inflation) est égal au taux de croissance de la masse monétaire ($\gamma_M$) moins le taux de croissance du PIB ($\gamma_Y$).</p>
 <p>Les économistes Pedro Teles, Harald Uhlig et João Valle e Azevedo se sont intéressés à vérifier si, en effet, les augmentations d&rsquo;offre monétaire généraient de l&rsquo;inflation (une fois escompté la croissance du PIB).
-Selon le schéma ci-dessous, notre théorie quantitative de la monnaie est assez acceptable (voir <a href="https://doi.org/10.1111/ecoj.12336%29" target="_blank" rel="noopener">https://doi.org/10.1111/ecoj.12336)</a>:</p>
+Selon le schéma ci-dessous, notre théorie quantitative de la monnaie est assez acceptable (voir <a href="https://doi.org/10.1111/ecoj.12336" target="_blank" rel="noopener">https://doi.org/10.1111/ecoj.12336</a>)</p>
 <p>
 
 
@@ -1143,14 +1143,15 @@ Une <strong>idée centrale de la pensée classique</strong> est que les prix s&r
 Autrement dit, une hausse de l&rsquo;offre monétaire n&rsquo;a pas d&rsquo;effet sur le PIB ($\bar{Y}$) car celui-ci est déterminé par le marché du travail et la courbe de production.
 Bien sûr, avoir plus de monnaie ne change aucune de ces deux courbes!
 Donc, si le PIB est incapable de réagir, et si nous imaginons que la vitesse de la monnaie reste constante, la seule chose qui se passe est que les gens détiennent plus de monnaie dans leurs poches.
-En conséquence, ils sont prêts à l&rsquo;utiliser pour faire des achats, donc il existe une augmentation de la demande des biens.
+Par conséquent, ils sont prêts à l&rsquo;utiliser pour faire des achats, ce qui produit il existe une augmentation de la demande des biens.
 Mais, comme nous avons dit, la production ne change pas.
 Ainsi, cette demande accrue se traduit par une augmentation des prix.</p>
 <p>Note: le modèle IS-LM (et l&rsquo;économie Keynésienne) s&rsquo;opposent à l&rsquo;hypothèse que la quantité produite ne peut pas s&rsquo;ajuster.</p>
 <h3 id="marché-de-lemprunt">Marché de l&rsquo;emprunt</h3>
 <p>La dernière composante du modèle classique est le marché de l&rsquo;emprunt.
 Ce marché détermine le taux d&rsquo;intérêt d&rsquo;équilibre.
-Comme on verra, ce marché n&rsquo;a pas d&rsquo;impact sur les autres variables : il opère en isolation et le taux d&rsquo;intérêt se détermine entièrement à partir des autres variables que nous connaissons déjà.</p>
+Comme nous le verrons, ce marché n&rsquo;a pas d&rsquo;impact sur les autres variables.
+Le taux d&rsquo;intérêt se détermine entièrement à partir des autres variables que nous connaissons déjà.</p>
 <p>Le point de départ est l&rsquo;identité comptable indiquant que, tout ce qui est produit dans une économie, doit être:</p>
 <ul>
 <li>Acheté par les ménages</li>
@@ -1159,20 +1160,20 @@ Comme on verra, ce marché n&rsquo;a pas d&rsquo;impact sur les autres variables
 </ul>
 <p>Ainsi :</p>
 <p>$$Y = c(Y-\bar{T}) + I(r) + \bar{G}$$</p>
-<p>On voit que la consommation est une fonction du revenu disponible, c&rsquo;est-à-dire, le revenu total moins les impôts : $c(Y-\bar{T})$.
+<p>Nous voyons que la consommation est une fonction du revenu disponible, c&rsquo;est-à-dire, le revenu total moins les impôts : $c(Y-\bar{T})$.
 L&rsquo;investissement est une fonction du taux d&rsquo;intérêt, et les dépenses du gouvernement sont exogènes, comme le niveau d&rsquo;imposition.</p>
 <h4 id="offre-de-fonds-prêtables">Offre de fonds prêtables</h4>
-<p>Une autre manière de présenter la même équation est en la regardant comme que l&rsquo;investissement doit être égal à l&rsquo;épargne totale.
-Ceci fait beaucoup de sens : tout ce qui est produit mais non-consommé est l&rsquo;épargne.
+<p>Une autre manière de présenter la même équation est de considérer que que l’investissement doit être égal à l’épargne totale.
+En effet, tout ce qui est produit mais non-consommé est épargné.
 Ce sont les fonds prêtables.
-Si pour n&rsquo;importe quelle raison ils augmentent, les épargneurs se concurrencent pour les placer auprès des entreprises, faisant diminuer le taux d&rsquo;intérêt.
-Et à l&rsquo;inverse, si les entreprises ont besoin d&rsquo;investir davantage (pour un même niveau d&rsquo;épargne), elles offriront un taux d&rsquo;intérêt pour important pour attirer l&rsquo;épargne des ménages.</p>
+Si pour n&rsquo;importe quelle raison ils augmentent, les épargnants se concurrencent pour les placer auprès des entreprises, faisant diminuer le taux d&rsquo;intérêt.
+Et à l&rsquo;inverse, si les entreprises ont besoin d&rsquo;investir davantage (pour un même niveau d&rsquo;épargne), elles offriront un taux d&rsquo;intérêt plus important pour attirer l&rsquo;épargne des ménages.</p>
 <ul>
 <li>Note: on peu imaginer que la consommation des ménages dépende aussi du taux d&rsquo;intérêt, mais ceci n&rsquo;est pas essentiel.</li>
 </ul>
 <p>De manière mathématique, l&rsquo;épargne totale est la somme de l&rsquo;épargne des ménages plus l&rsquo;épargne du gouvernement</p>
 <ul>
-<li>Le gouvernement normalement a un épargne négative car il est en déficit.</li>
+<li>Le gouvernement normalement a une épargne négative car il est en déficit.</li>
 </ul>
 <p>Si l&rsquo;on dénote l&rsquo;épargne privé par $S^P$ et l&rsquo;épargne publique par $S^G$</p>
 <p>$$S^P = Y - \bar{T} - c(Y - \bar{T})$$
@@ -1193,7 +1194,7 @@ En effet, les entreprises doivent rembourser leurs emprunts et, si le taux augme
 En effet, si nous partons de $Y = c(Y-\bar{T}) + I(r) + \bar{G}$, nous avons :</p>
 <p>\begin{align}
 Y &amp;= c(Y-\bar{T}) + I(r) + \bar{G} = \\
-&amp;= \bar{T} - \bar{T} +c(Y-\bar{T}) + I(r) + \bar{T} - \bar{G}
+&amp;= \bar{T} - \bar{T} +c(Y-\bar{T}) + I(r) - \bar{G}
 \end{align}
 \begin{align}
 Y - \bar{T} + \bar{T} - c(Y-\bar{T}) - \bar{G} &amp;= I(r) \\
@@ -1251,7 +1252,7 @@ Ainsi, avec moins de fonds disponibles, leur prix d&rsquo;équilibre (le taux d&
 <p>Ainsi, le marché de travail détermine le <strong>salaire réel</strong> $\frac{w}{p}$ et le nombre de travailleurs $N^\star$.
 Une fois le nombre de travailleurs connu, la fonction de production indique l&rsquo;offre global de biens: $\bar{Y} = F(\bar{K}, N^\star)$.
 Enfin, le marché de la monnaie ajuste le prix $p$ pour que l&rsquo;offre de monnaie coïncide avec le niveau de production (en considérant la vitesse).
-Avec $p$, le salaire nominal est aussi établi : $w = \frac{w}{p} p$.
+Avec $p$, le salaire nominal est aussi établi : $w = \frac{w}{p} \times p.$
 De l&rsquo;autre côté, avec $\bar{Y}, \bar{T}$ et $\bar{G}$, et la fonction de demande d&rsquo;épargne, nous pouvons calculer le taux d&rsquo;intérêt.</p>
 <p>
 
@@ -1274,12 +1275,12 @@ De l&rsquo;autre côté, avec $\bar{Y}, \bar{T}$ et $\bar{G}$, et la fonction de
     <div class="w-100" ><img src="/img/macro_2/all_markets.webp" alt="all_markets" loading="lazy" data-zoomable /></div>
   </div></figure>
 </p>
-<h2 id="politique-fiscale-et-monétaire">Politique fiscale et monétaire</h2>
-<p>Dans le modèle classique, les politiques fiscale et monétaire ne permettent pas d&rsquo;augmenter la production ou réduire le taux de chômage.
+<h2 id="politique-budgétaire-et-monétaire">Politique budgétaire et monétaire</h2>
+<p>Dans le modèle classique, les politiques budgétaire et monétaire ne permettent pas d&rsquo;augmenter la production ou de réduire le taux de chômage.
 Le seul effet est de changer le taux d&rsquo;intérêt ou le niveau de prix.</p>
 <h3 id="augmentation-des-dépenses-publiques">Augmentation des dépenses publiques</h3>
-<p>Imaginons que le gouvernement souhaitait augmenter les dépenses publiques pour stimuler la demande et permettre une sortie plus rapide d&rsquo;une crise.
-Selon le paradigme classique, cette hausse de dépenses n&rsquo;a aucun impacte sur le PIB (ni sur les autres variables réelles).</p>
+<p>Imaginons que le gouvernement souhaite augmenter les dépenses publiques pour stimuler la demande et permettre une sortie plus rapide d&rsquo;une crise.
+Selon le paradigme classique, cette hausse de dépenses n&rsquo;a aucun impact sur le PIB (ni sur les autres variables réelles).</p>
 <p>En effet, $G$ apparaît seulement dans l&rsquo;équation d&rsquo;équilibre du marché de l&rsquo;emprunt.
 Plus en détail, elle fait partie de l&rsquo;offre de fonds prêtables:</p>
 <p>$$S = S^P + S^G = \bar{Y} - c(\bar{Y}-\bar{T}) - \bar{G}$$
@@ -1292,11 +1293,12 @@ Ainsi, si $G$ augmente, immédiatement:</p>
 </ul>
 <p>On appelle à ce phénomène <strong>effet d&rsquo;éviction</strong> (crowding out).
 En augmentant ses dépenses, le gouvernement &ldquo;prend&rdquo; de l&rsquo;argent aux individus, ce qui se traduit par une moindre consommation ou une réduction de l&rsquo;investissement.
-L&rsquo;effet d&rsquo;éviction est dérière la forte opposition des économistes classiques envers un gouvernement grand:</p>
+L&rsquo;effet d&rsquo;éviction est l&rsquo;un des arguments justifiant la forte opposition des économistes classiques à l&rsquo;État providence:</p>
 <ul>
 <li>Une réduction de l&rsquo;investissement implique moins de capital demain, donc moins de croissance économique.
 Pour rappel: $Y=F(K,N)$</li>
-<li>Si la consommation se réduit, on dit que les individus connaissent mieux leurs préférences et comment dépenser l&rsquo;argent de manière optimale pour eux que le gouvernement.</li>
+<li>La consommation peut baisser.
+En effet, les agents économiques sont considérés comme plus à même de dépenser de manière optimal leur revenu que ce que l’État pourrait le dépenser.</li>
 </ul>
 <p>
 
@@ -1348,11 +1350,11 @@ Pour rappel: $Y=F(K,N)$</li>
 <p>Selon un économiste classique, rien!
 Il dirait:
 &ldquo;Regardez, je vois que beaucoup de personnes ne travaillent pas.
-Cela veut dire soit que la fonction de production a changé, soit que les préférences des individus ont changé.
+Cela signifie que soit la fonction de production a changé, soit que les préférences des individus ont changé.
 Si c&rsquo;était un changement technologique, le salaire réel aurait baissé, et nous n&rsquo;observons pas ça.
 Ce qu&rsquo;on observe, c&rsquo;est une hausse du salaire réel : l&rsquo;offre de travail a diminué!
-Cela explique aussi que la production diminue, et que les prix tombent, comme on le voit.</p>
-<p>Comme tout ce qu&rsquo;on observe est le résultat d&rsquo;un processus d&rsquo;optimisation individuelle qui conduit les gens à préférer travailler moins, on ne doit rien faire.
+Cela explique aussi que la production diminue, et que les prix chutent, comme on le voit.</p>
+<p>Comme tout ce qu&rsquo;on observe est le résultat d&rsquo;un processus d&rsquo;optimisation individuelle qui conduit les individus à préférer travailler moins, on ne doit rien faire.
 Et en plus, si on augmentait les dépenses publiques ou l&rsquo;offre de monnaie, le seul effet serait sur des variables nominales.&rdquo;</p>
 <div class="footnotes" role="doc-endnotes">
 <hr>
